# auditize

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  README.md  SECURITY.md  SETUP_GITHUB.md  pyproject.toml
.github/workflows/: scan.yml
cli/: .pypirc.example  PUBLISH.md  README.md  __init__.py  __main__.py  main.py  output.py  rules.py  scanner.py
cli/rules/: README.md  SEC-001.md  SEC-002.md  SEC-003.md  SEC-004.md  SEC-005.md  SEC-006.md  SEC-007.md  SEC-008.md  SEC-009.md  SEC-010.md  SEC-011.md  SEC-012.md  SEC-013.md  SEC-014.md  SEC-015.md  SEC-016.md  SEC-017.md  SEC-018.md  SEC-019.md  SEC-020.md  SEC-021.md  SEC-022.md
scripts/: pre-commit.sh  release.sh
tests/: conftest.py  test_output.py  test_rules.py  test_scanner.py
website/: .gitignore  dev.sh  start.sh
website/backend/: .gitignore  Dockerfile  requirements.txt
website/backend/app/: admin_app.py  db.py  email_utils.py  main.py
website/backend/app/api/: admin.py  assets.py  chat.py  chat_history.py  compile.py  export.py  generate.py  notifications.py  payment.py  review.py  routes.py  scan.py  settings.py  team.py
website/backend/app/auth/: auth.py
website/backend/app/scanner/: reporter.py  static_analyzer.py
website/backend/tests/: conftest.py  test_api.py  test_assets.py  test_auth.py  test_chat.py  test_compile.py  test_scan.py  test_team.py
website/demo/: engine.py  update_server.py
website/demo/rules/: dangerous-functions.json  fs-operations.json  hardcoded-secrets.json  network-access.json  sql-injection.json
website/demo/samples/: safe_app.py  unsafe_app.py
website/deploy/: Dockerfile.tunnel  ca.crt  ca.key  docker-compose.yml  nexus.crt  nexus.csr  nexus.key  nginx.conf  setup.sh  tunnel-config.yml
website/docs/: CHANGELOG.md  CODE_MAP.md  OPS.md  README.md
website/docs/yizhizhu/: 前后端连接.md  前端.md  后端.md  学习  安全.md  部署与运维.md
website/frontend/: Dockerfile.dev  index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
website/frontend/src/: App.tsx  index.css  main.tsx
website/frontend/src/components/: AdminPage.tsx  AssetLibrary.tsx  Dashboard.tsx  ErrorBoundary.tsx  LandingPage.tsx  Login.tsx  MainPage.tsx  PigLogo.tsx  ReviewPage.tsx  SafetyReport.tsx  SettingsPage.tsx  Sidebar.tsx  TaskHistory.tsx  TeamPage.tsx
website/frontend/src/context/: LanguageContext.tsx  SettingsContext.tsx  ThemeContext.tsx  ToastContext.tsx
website/frontend/src/lib/: api.ts  translations.ts
website/frontend/src/test/: ErrorBoundary.test.tsx  LanguageContext.test.tsx  Login.test.tsx  TeamPage.test.tsx  ThemeContext.test.tsx  ToastContext.test.tsx  setup.ts
