[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trufflekit"
version = "0.1.0"
description = "AI 项目确定性安全审查工具 — 告诉你从哪里看起，而不是丢给你一个列表"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["security", "audit", "code-review", "ai", "static-analysis"]
authors = [
    { name = "TruffleKit" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://trufflekit.com"
Source = "https://github.com/trufflekit/truffle"
Documentation = "https://github.com/trufflekit/truffle/tree/main/cli/rules"

[project.scripts]
truffle = "cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.hatch.build.targets.sdist]
include = [
    "cli/",
    "README.md",
]
