[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auditize-cli"
version = "0.1.1"
description = "Deterministic security scanner for AI-generated projects. Scan any project, get a prioritized action plan — so you review 3 files instead of 300."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["security", "audit", "code-review", "ai", "static-analysis"]
authors = [
    { name = "Auditize" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/yizhizhu222/auditize"
Source = "https://github.com/yizhizhu222/auditize"
Documentation = "https://github.com/yizhizhu222/auditize/tree/main/cli/rules"

[project.scripts]
auditize = "cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.hatch.build.targets.sdist]
include = [
    "cli/",
    "scripts/",
    "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]

[project.optional-dependencies]
test = ["pytest>=7.0"]
dev = ["pytest>=7.0", "build", "twine"]
